serde_someip/derive_tests/failures/struct_tuple.rs
use serde_someip::SomeIp;

#[derive(SomeIp)]
struct Test(u32, u64);

fn main() {}
